# ChatHTML

./: .gitignore  API_SPEC.md  README.md  app.py  bak_app.py  manual.md  models.py  refactor.py  run_split.py  run_split_patch.py  split_app.py  split_ast.py  store.py  test_history.py  test_js.py  views.py  worker.py  workflow.py
backend/paper-workflow/: Cargo.toml
backend/paper-workflow/src/: main.rs  models.rs  routes.rs  store.rs  worker.rs
frontend/paper-workflow/: index.html  package-lock.json  package.json  vite.config.ts
frontend/paper-workflow/src/: App.vue  router.ts  style.css
frontend/paper-workflow/src/api/: client.ts
frontend/paper-workflow/src/components/: JobCard.vue  NewJobModel.vue  PaperReader.vue  SettingsModal.vue
frontend/paper-workflow/src/types/: api.ts
frontend/paper-workflow/src/views/: HomeView.vue  ReaderView.vue
