[package]
name = "paper-workflow"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = { version = "0.7", features = ["multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }
tar = "0.4"
flate2 = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
mime_guess = "2.0"